--- a/config.env
+++ b/config.env
@@ -1,8 +1,8 @@
 CONFIG_ENV=config.env
 
-KERNEL_SOURCE=https://github.com/xiaoleGun/android_kernel_xiaomi_wayne-4.19
-KERNEL_SOURCE_BRANCH=twrp-12
-KERNEL_CONFIG=vendor/wayne_defconfig
+KERNEL_SOURCE=https://github.com/almostdead1/kernel_xiaomi_sdm845
+KERNEL_SOURCE_BRANCH=optest
+KERNEL_CONFIG=perf_defconfig
 KERNEL_IMAGE_NAME=Image.gz-dtb
 ARCH=arm64
 ADD_LOCALVERSION_TO_FILENAME=false
@@ -49,9 +49,9 @@ REMOVE_UNUSED_PACKAGES=true
 
 # AnyKernel3
 ## AnyKernel3 Custom
-USE_CUSTOM_ANYKERNEL3=false
-CUSTOM_ANYKERNEL3_SOURCE=
-CUSTOM_ANYKERNEL3_BRANCH=
+USE_CUSTOM_ANYKERNEL3=true
+CUSTOM_ANYKERNEL3_SOURCE=https://github.com/almostdead1/AnyKernel3
+CUSTOM_ANYKERNEL3_BRANCH=master
 
 # Ccache
 ENABLE_CCACHE=true
