--- a/config.env
+++ b/config.env
@@ -19,7 +19,7 @@ CUSTOM_CMDS:CLANG_TRIPLE=aarch64-linux-gnu-
 
 ## AOSP
 CLANG_BRANCH=android11-dev
-CLANG_VERSION=r377782c
+CLANG_VERSION=r383902b
 
 # GCC
 ENABLE_GCC_ARM64=true
