--- a/config.env
+++ b/config.env
@@ -1,12 +1,12 @@
 CONFIG_ENV=config.env
 
 KERNEL_SOURCE=https://github.com/almostdead1/kernel_xiaomi_sdm845
-KERNEL_SOURCE_BRANCH=11.0
+KERNEL_SOURCE_BRANCH=stock
 KERNEL_CONFIG=beryllium_user_defconfig
 KERNEL_IMAGE_NAME=Image.gz-dtb
 ARCH=arm64
 ADD_LOCALVERSION_TO_FILENAME=false
-EXTRA_CMDS:
+EXTRA_CMDS:LD=ld.lld
 
 # Clang
 ## Custom
