--- a/config.env
+++ b/config.env
@@ -18,8 +18,8 @@ CUSTOM_CLANG_BRANCH=
 CUSTOM_CMDS:CLANG_TRIPLE=aarch64-linux-gnu-
 
 ## AOSP
-CLANG_BRANCH=android14-dev
-CLANG_VERSION=r450784e
+CLANG_BRANCH=android12-dev
+CLANG_VERSION=r416183b1
 
 # GCC
 ENABLE_GCC_ARM64=true
