--- a/config.env
+++ b/config.env
@@ -1,12 +1,12 @@
 CONFIG_ENV=config.env
 
 KERNEL_SOURCE=https://github.com/almostdead1/kernel_xiaomi_sdm845
-KERNEL_SOURCE_BRANCH=optest
+KERNEL_SOURCE_BRANCH=test
 KERNEL_CONFIG=perf_defconfig
 KERNEL_IMAGE_NAME=Image.gz-dtb
 ARCH=arm64
 ADD_LOCALVERSION_TO_FILENAME=false
-EXTRA_CMDS:LD=ld.lld
+EXTRA_CMDS:
 
 # Clang
 ## Custom
@@ -18,8 +18,8 @@ CUSTOM_CLANG_BRANCH=
 CUSTOM_CMDS:CLANG_TRIPLE=aarch64-linux-gnu-
 
 ## AOSP
-CLANG_BRANCH=android11-dev
-CLANG_VERSION=r383902b
+CLANG_BRANCH=android12-dev
+CLANG_VERSION=r416183b1
 
 # GCC
 ENABLE_GCC_ARM64=true
